# empymod

./: .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CREDITS.rst  MAINTENANCE.rst  MANIFEST.in  Makefile  NOTICE  README.md  README.rst  ROADMAP.rst  THANKS.md  notes2self4release.rst  pyproject.toml  requirements-dev.txt  requirements-rtfd.txt  requirements.txt  runtests.sh  setup.cfg  setup.py
.github/workflows/: linkcheck.yml  linux.yml  macos_windows.yml  pytest.yml  pytest_win_mac.yml
docs/: Makefile  PermissionToRelicenseFilters.txt  addons.rst  code-addons.rst  code-modeller.rst  code-other.rst  code.rst  conf.py  empymod.rst  index.rst  maintenance.rst  manual.rst  modeller.rst  references.rst  speedmemoryaccuracy.rst  transforms.rst
docs/LaTeX/: fdesign.tex  tmtemod.tex
docs/_static/: style.css
docs/_templates/: layout.html
docs/api/: fdesign.rst  filters.rst  index.rst  io.rst  kernel.rst  model.rst  tmtemod.rst  transform.rst  utils.rst
docs/dev/: contributing.rst  index.rst  maintenance.rst  release.rst  tests.rst
docs/gallery/: index.rst
docs/manual/: about.rst  citation.rst  credits.rst  index.rst  info.rst  installation.rst  iocli.rst  license.rst  references.rst  transforms.rst  usage.rst
empymod/: Makefile  __init__.py  __main__.py  _ckernel.py  ckernel.py  fields.c  filters.py  greenfct.c  io.py  kernel.py  model.py  reflections.c  systems.py  transform.py  utils.py  version.py  wavenumber.c
empymod/cli/: __init__.py  main.py  run.py
empymod/scripts/: __init__.py  dhzdt.py  dlftools.py  fdesign.py  printinfo.py  tmtemod.py
examples/: coordinate_system.py
examples/add_ons/: README.rst  dlf_design.py  tmte_split.py
examples/comparisons/: README.rst  full_vs_diffusive.py  halfspace_vs_dipole.py
examples/educational/: README.rst  coordinate_system.py  dipoles_and_loops.py  dlf_design.py  dlf_standard_lagged_splined.py  halfspace_vs_dipole.py  ht_ft_with_other_modellers.py  random_noise_f_domain.py  tmte_split.py
examples/frequency_domain/: 1a_Frequency_Single-and-Crossplot.py  1b_Frequency_Dipole-vs-Bipole.py  README.rst  biot_savart.py  dipole_vs_bipole.py  full_vs_diffusive.py  ipandq.py  ipandqp.py  magnetotelluric.py  sil_biot_savart.py  single_and_crossplot.py  src_rec_comparison.py
examples/published/: README.rst  article_werthmuller-2017-GEO.py  article_werthmuller-2019-GEO.py  book_ziolkowski-slob-2019-CPU.py  tutorial_werthmuller-2017-TLE.py
examples/reproducing/: README.rst  constable2006.py  csem.py  fem_tem.py  hunziker2015.py  ward1988.py  ziolkowski2007.py
notebooks/: Benchmark.ipynb  Comparing.ipynb  Frequency_Dipole-vs-Bipole.ipynb  Frequency_Single-and-Crossplott.ipynb  Profiling.ipynb  README.md  Time_Step-and-Impulse.ipynb  Time_Step-and-Impulse.py
paper/: geophysics.cls
tests/: create_dipole1d.py  create_emmod.py  create_empymod.py  create_external.py  create_fem_tem.py  create_green3d.py  create_kernel.py  create_transform.py  data_dipole1d.npz  data_emmod.npz  data_empymod.npz  data_fem_tem.npz  data_green3d.npz  data_kernel.npz  data_transform.npz  fem_data.pck  temporary-testing.py  test_ckernel.py  test_cli.py  test_fdesign.py  test_filters.py  test_io.py  test_kernel.py  test_kernel_jacobians.py  test_model.py  test_printinfo.py  test_tmtemod.py  test_transform.py  test_utils.py
(+80 files in other folders)
